got rid of comment

--- a/documentation/HazardAnalysis/HazardAnalysis.tex
+++ b/documentation/HazardAnalysis/HazardAnalysis.tex
@@ -2,7 +2,7 @@
 \usepackage{geometry}
 \geometry{letterpaper}
 
-% TODO: roadmap, categorize the hardwares
+% TODO: roadmap
 
 \usepackage{graphicx}
 \usepackage{amssymb}
