--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -197,6 +197,7 @@ This module will hold the data for each user in such a way information can be ex
 The algorithm to build the model. \\ \\
 \textbf{MID}
 \begin{itemize}
+\item Model \textbf{model} - representation of shot performance data for extracting information
 \item \textbf{train} - Cursor cur \\ returns: \textit{none} \\ description: using some data from Cursor, this will train the model
 \item \textbf{next} - none \\ returns: \textit{Shot} \\ description: returns a shot based on the user's past performance
 \end{itemize}
